Added some test blocks

--- a/src/main/resources/assets/improvedsmelting/lang/en_us.json
+++ b/src/main/resources/assets/improvedsmelting/lang/en_us.json
@@ -1,3 +1,7 @@
 {
-  "item.improvedsmelting.calculator": "Calculator"
+  "item.improvedsmelting.calculator": "Calculator",
+  "item.improvedsmelting.rubix_cube": "Rubix Cube",
+
+  "block.improvedsmelting.cheese_ore": "Cheese Ore",
+  "block.improvedsmelting.australia_map": "Australia"
 }
