--- a/src/main/resources/assets/improvedsmelting/lang/en_us.json
+++ b/src/main/resources/assets/improvedsmelting/lang/en_us.json
@@ -1,6 +1,8 @@
 {
   "item.improvedsmelting.calculator": "Calculator",
   "item.improvedsmelting.rubix_cube": "Rubix Cube",
+  "item.improvedsmelting.raw_cheese": "Raw Cheese",
+  "item.improvedsmelting.cheese": "Cheese",
 
   "block.improvedsmelting.cheese_ore": "Cheese Ore",
   "block.improvedsmelting.australia_map": "Australia",
