--- a/src/main/resources/assets/improvedsmelting/lang/en_us.json
+++ b/src/main/resources/assets/improvedsmelting/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.improvedsmelting.rubix_cube": "Rubix Cube",
   "item.improvedsmelting.raw_cheese": "Raw Cheese",
   "item.improvedsmelting.cheese": "Cheese",
+  "item.improvedsmelting.midas": "Hand of Midas",
 
   "block.improvedsmelting.cheese_ore": "Cheese Ore",
   "block.improvedsmelting.australia_map": "Australia",
