--- a/src/main/resources/assets/improvedsmelting/lang/en_us.json
+++ b/src/main/resources/assets/improvedsmelting/lang/en_us.json
@@ -3,10 +3,14 @@
   "item.improvedsmelting.rubix_cube": "Rubix Cube",
   "item.improvedsmelting.raw_cheese": "Raw Cheese",
   "item.improvedsmelting.cheese": "Cheese",
+
   "item.improvedsmelting.midas": "Hand of Midas",
+
 
   "block.improvedsmelting.cheese_ore": "Cheese Ore",
   "block.improvedsmelting.australia_map": "Australia",
+  "block.improvedsmelting.midas_block": "Block of Midas",
+
 
   "creativetab.bettersmelting.bettersmelting_blocks": "Better Smelting Blocks",
   "creativetab.bettersmelting.bettersmelting_items": "Better Smelting Items"
