Added a coconut, coconut husk and coconut milk. Coconut milk is a food item that gives 8 nutrition, 3 saturation and has a 20% chance of giving hunger 1 for 30 seconds (same as rotten flesh) and nasuea for 15 seconds (same as pufferfish). When coconut milk is consumed it leaves behind coconut husk, same as stew with bowls.
also added another creative mode tab for food items and removed the initial few items I added from the vanilla tabs.

--- a/src/main/resources/assets/improvedsmelting/lang/en_us.json
+++ b/src/main/resources/assets/improvedsmelting/lang/en_us.json
@@ -1,17 +1,25 @@
 {
+  // items
   "item.improvedsmelting.calculator": "Calculator",
   "item.improvedsmelting.rubix_cube": "Rubix Cube",
   "item.improvedsmelting.raw_cheese": "Raw Cheese",
   "item.improvedsmelting.cheese": "Cheese",
 
+  // food
+  "item.improvedsmelting.coconut_milk": "Coconut Milk",
+  "item.improvedsmelting.coconut": "Coconut",
+  "item.improvedsmelting.coconut_husk": "Coconut Husk",
+
+  // usable items
   "item.improvedsmelting.midas": "Hand of Midas",
 
-
+  // blocks
   "block.improvedsmelting.cheese_ore": "Cheese Ore",
   "block.improvedsmelting.australia_map": "Australia",
   "block.improvedsmelting.midas_block": "Block of Midas",
 
-
+  // creative mode tabs
   "creativetab.bettersmelting.bettersmelting_blocks": "Better Smelting Blocks",
-  "creativetab.bettersmelting.bettersmelting_items": "Better Smelting Items"
+  "creativetab.bettersmelting.bettersmelting_items": "Better Smelting Items",
+  "creativetab.bettersmelting.bettersmelting_food": "Better Smelting Food"
 }
